test/paramNotConsumedError.slq
def f[n:!ℕ](cand:int[n])⇒cand=1; // error
